Fix some issues for HTML & CSS to pass W3C validation Change font-size to improve readability

--- a/style.css
+++ b/style.css
@@ -677,11 +677,11 @@ a {
 }
 
 p {
-    font-size: 13px;
+    font-size: 14px;
 }
 
 .p-big {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -691,7 +691,7 @@ p {
 }
 
 .h1 {
-    font-size: 20px;
+    font-size: 24px;
     font-family: "Open Sans";
 }
 
@@ -714,7 +714,7 @@ h2 {
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 16px;
     text-transform: uppercase;
     text-decoration-line: underline;
     font-weight: 600;
@@ -850,13 +850,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -875,8 +875,12 @@ h4 {
         position: relative;
     }
     .bloc {
+        padding: 0 20px;
+/* Below are not valid values for padding-left nor padding-right. 
+   On top of this, a padding: 0 20px is set which sets the padding left and right to 20px. 
+   Unnecessary entries commented as they create errors in W3C CSS validation
         padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        padding-right: constant(safe-area-inset-right); */
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -886,8 +890,11 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
+/* Below are not valid values for padding-left nor padding-right. 
+   On top of this, a padding: 0 20px is set which sets the padding left and right to 20px. 
+   Unnecessary entries commented as they create errors in W3C CSS validation
         padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        padding-right: constant(safe-area-inset-right); */
     }
 }
 
